--- a/power/android.hardware.power@1.1-service.xiaomi_wayne.rc
+++ b/power/android.hardware.power@1.1-service.xiaomi_wayne.rc
@@ -1,4 +1,4 @@
-service power-hal-1-1 /vendor/bin/hw/android.hardware.power@1.1-service.xiaomi_wayne
+service vendor.power-hal-1-1 /vendor/bin/hw/android.hardware.power@1.1-service.xiaomi_wayne
     class hal
     user system
     group system
