--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -87,6 +87,10 @@ on init
     write /sys/module/lpm_levels/system/perf/perf-l2-ret/idle_enabled N
     write /sys/module/lpm_levels/parameters/sleep_disabled N
 
+    # ZRAM setup
+    write /sys/block/zram0/comp_algorithm lz4
+    write /proc/sys/vm/page-cluster 0
+
     # create necessary cpusets
     mkdir /dev/cpuset/camera-daemon 0750 cameraserver cameraserver
 
@@ -97,7 +101,6 @@ on fs
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
     mount_all /vendor/etc/fstab.qcom
-    swapon_all /vendor/etc/fstab.qcom
     chown root system /mnt/vendor/persist
     chmod 0771 /mnt/vendor/persist
     mkdir /mnt/vendor/persist/data 0700 system system
@@ -320,6 +323,9 @@ on property:init.svc.zygote=restarting
 
 on property:sys.boot_completed=1
     setprop sys.io.scheduler "bfq"
+
+    # Enable ZRAM
+    swapon_all /vendor/etc/fstab.qcom
 
     write /dev/cpuset/top-app/cpus 0-7
     write /dev/cpuset/foreground/boost/cpus 0-3,6-7
