--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -118,6 +118,10 @@ on boot
     chown system system /persist/speccfg/submask
     chown system system /persist/speccfg/partition
     chown system system /mnt/vendor/persist/sensors/sns.reg
+
+    # Fingerprint
+    chown system system /sys/bus/platform/devices/soc:fingerprint_fpc/proximity_state
+    chown system system /sys/bus/platform/devices/soc:fingerprint_goodix/proximity_state
 #spk pa-cal lct-20180914
     chmod 0664 /dev/tiload_node
 
