--- a/rootdir/etc/init.performance.wayne.rc
+++ b/rootdir/etc/init.performance.wayne.rc
@@ -41,6 +41,9 @@ on post-fs
     # Disable sched autogroup
     write /proc/sys/kernel/sched_autogroup_enabled 0
 
+    # set RLIMIT_MEMLOCK to 64MB
+    setrlimit 8 67108864 67108864
+
 on property:sys.boot_completed=1
     # Set the default IRQ affinity to the silver cluster.
     write /proc/irq/default_smp_affinity f
