wayne: Update irq affinity to silver core
Bug: 79151909
Test: cat /proc/irq/default_smp_affinity --> 0f
Change-Id: Ic7ea188aadb1ba0940d4469dd3447459ae49fb50
Signed-off-by: celtare21 <celtare21@gmail.com>
Signed-off-by: PIPIPIG233666 <2212848813@qq.com>

--- a/rootdir/etc/init.performance.wayne.rc
+++ b/rootdir/etc/init.performance.wayne.rc
@@ -42,6 +42,8 @@ on post-fs
     write /proc/sys/kernel/sched_autogroup_enabled 0
 
 on property:sys.boot_completed=1
+    # Set the default IRQ affinity to the silver cluster.
+    write /proc/irq/default_smp_affinity f
 
     # set default schedTune value for foreground/top-app (only affects EAS)
     write /dev/stune/foreground/schedtune.prefer_idle 1
