wayne: rootdir: Add vendor prefix to power_off_alarm service
power_off_alarm is a vendor service. Add vendor prefix to it.

Change-Id: Ib4a988467a54bbe4544960180afeeeb5dd0e85f3
Signed-off-by: PIPIPIG233666 <2212848813@qq.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -574,7 +574,7 @@ service vendor.sensors.qti /vendor/bin/sensors.qti
     disabled
     writepid /dev/cpuset/system-background/tasks
 
-service power_off_alarm /vendor/bin/power_off_alarm
+service vendor.power_off_alarm /vendor/bin/power_off_alarm
     class core
     group system
     disabled
