wayne: Rework power-libpermgr
Based on https://github.com/wight554/device_xiaomi_msm8998-common/tree/pie/power-libperfmgr

Signed-off-by: celtare21 <celtare21@gmail.com>
Signed-off-by: PIPIPIG233666 <2212848813@qq.com>

# Conflicts:
#	configs/powerhint.json
#	power-libperfmgr/Power.cpp

--- a/rootdir/etc/init.performance.wayne.rc
+++ b/rootdir/etc/init.performance.wayne.rc
@@ -120,3 +120,6 @@ on property:sys.boot_completed=1
 
     # Enable Adaptive LMK
     write /sys/module/lowmemorykiller/parameters/minfree "18432,23040,27648,32256,55296,80640"
+
+    # Enable PowerHAL hint processing
+    setprop vendor.powerhal.init 1
