wayne: rootdir: add power_off_alarm into init.rc
Add power_off_alarm into init.rc on charge mode

Change-Id: I18158cde8b3ae0890a92bd1ced56782fa053230a
CRs-Fixed: 2373093
Signed-off-by: PIPIPIG233666 <2212848813@qq.com>

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -271,6 +271,7 @@ on property:sys.boot_completed=1
 
 on charger
     start qcom-post-boot
+    start vendor.power_off_alarm
     start vendor.hvdcp_opti
     setprop sys.usb.configfs 1
     start thermal-engine
