wayne: Enable iowait boost
Signed-off-by: celtare21 <celtare21@gmail.com>
Signed-off-by: PIPIPIG233666 <2212848813@qq.com>

--- a/rootdir/etc/init.performance.wayne.rc
+++ b/rootdir/etc/init.performance.wayne.rc
@@ -135,11 +135,13 @@ on property:sys.boot_completed=1
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "schedutil"
     write /sys/devices/system/cpu/cpufreq/policy0/schedutil/up_rate_limit_us 500
     write /sys/devices/system/cpu/cpufreq/policy0/schedutil/down_rate_limit_us 20000
+    write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/iowait_boost_enable 1
 
     # Configure schedutil for LITTLE cores
     write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor "schedutil"
     write /sys/devices/system/cpu/cpufreq/policy4/schedutil/up_rate_limit_us 500
     write /sys/devices/system/cpu/cpufreq/policy4/schedutil/down_rate_limit_us 20000
+    write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/iowait_boost_enable 1
 
     # Ensure minimum frequencies set to 300MHz
     write /sys/devices/system/cpu/cpufreq/policy0/scaling_min_freq 300000
