wayne: wifi: Update wifi configs from miui 9.4.18

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -126,7 +126,6 @@ BandCapability=0
 
 #Channel Bonding
 gChannelBondingMode5GHz=1
-gChannelBondingMode24GHz=1
 
 #Say gGoKeepAlivePeriod(5 seconds) and gGoLinkMonitorPeriod(10 seconds).
 #For every 10 seconds DUT send Qos Null frame(i.e., Keep Alive frame if link
@@ -459,8 +458,9 @@ gEnableNanSupport=1
 # bit-5 : drop DTP/LLC/CDP
 g_enable_packet_filter_bitmap=3
 
-# Disable RX wakelock feature
-rx_wakelock_timeout=0
+# Enable pkt log
+# 1 - enable, 0 - disable
+gEnablePacketLog=1
 
 END
 
