--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -110,8 +110,8 @@ on boot
     chown system system /mnt/vendor/persist/sensors/sns.reg
 
     # Fingerprint
-    chown system system /sys/bus/platform/devices/soc:fingerprint_fpc/proximity_state
-    chown system system /sys/bus/platform/devices/soc:fingerprint_goodix/proximity_state
+    chown system system /sys/bus/platform/devices/soc:fpc1020/proximity_state
+    chown system system /sys/bus/platform/devices/soc:goodix_fp/proximity_state
 #spk pa-cal lct-20180914
     chmod 0664 /dev/tiload_node
 
